[tool.poetry]
name = "tap-harvest-engine"
version = "0.0.1"
description = "`tap-harvest-engine` is a Singer tap for HarvestEngine, built with the Meltano SDK for Singer Taps."
authors = ["Pat Nadolny"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6"
requests = "^2.25.1"
singer-sdk = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
responses = "^0.13.3"
coverage = "^5.5"
pycodestyle = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-harvest-engine = 'tap_harvest_engine.tap:TapHarvestEngine.cli'
